--- a/contact.css
+++ b/contact.css
@@ -229,6 +229,14 @@ body{
     padding: 10px;
     
   }
+  .media {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
   
   
 }
